# smol_tftp

./: Cargo.toml  README.md
src/: client.rs  device.rs  error.rs  lib.rs  macros.rs  main.rs  packet.rs  server.rs  socket.rs
tests/: netascii.rs
