[package]
name = "smol_tftp"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[library]
name = "smol_tftp"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[features]
default = ["std"]
std = ["managed/std", "smoltcp/std", "smoltcp/log"]

[dependencies]
heapless = "0.8.0"
managed = { version = "0.8.0", default-features = false }
smoltcp = { version =  "0.12.0", default-features = false, features = ["proto-ipv4", "proto-ipv6", "medium-ip", "socket-udp"] }
